--- a/graphics/graph.css
+++ b/graphics/graph.css
@@ -2,7 +2,7 @@ html, body, #cy {
     width: 100%;
     height: 100%;
     margin: 0;
-    background: #111;
+    background: #7a90ff48;
   }
   #side-panel {
     position: fixed;
@@ -10,7 +10,7 @@ html, body, #cy {
     right: 0;
     width: 320px;
     height: 100%;
-    background: #1e1e1e;
+    background: #23376b;
     color: #fff;
     padding: 1rem;
     box-shadow: -2px 0 8px rgba(0, 0, 0, 0.4);
